# otelproto4research

./: README.md  pyproject.toml
src/otelproto4research/: read.py
tests/: read_test.py
